<resources>
    <string name="app_name">Popular Movies</string>
    <string name="no_internet">No Internet Connectivity</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Movies Settings</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_most_popular_value</string>

    <!-- Label for order-by Favourites Movies [CHAR LIMIT=20] -->
    <string name="settings_order_by_favourites">Favourites</string>
    <string name="settings_order_by_favourites_value" translatable="false">FavouriteActivity</string>

    <!-- Label for order-by Top-Rated Movies [CHAR LIMIT=20] -->
    <string name="settings_order_by_top_rated_label">Top Rated</string>
    <string name="settings_order_by_top_rated_value" translatable="false">top_rated</string>

    <!-- Label for order-by Popular Movies [CHAR LIMIT=20] -->
    <string name="settings_order_by_most_popular_label">Popular Movies</string>
    <string name="settings_order_by_most_popular_value" translatable="false">popular</string>

    <string name="settings_activity_name" translatable="false">activity_title</string>
    <string name="settings_activity_name_default" translatable="false">@string/settings_activity_popular</string>
    <string name="settings_activity_popular" translatable="false">Popular Movies</string>
    <string name="settings_activity_top_rated" translatable="false">Top Rated</string>
    <string name="saved_favourite_key" translatable="false">com.example.gregorio.popularmovies.PREFERENCE_FAVOURITE_KEY</string>


    <string name="error_message">
        An error has occurred. Please try again.
    </string>
    <string name="settings">Settings</string>
    <string name="detail_activity">Movie Detail</string>
    <string name="favourite_activity">My Favourites</string>
    <string name="no_reviews_message">Write the first review for this film ;)</string>
    <string name="insert_to_favourites">ADD TO FAVOURITES</string>
    <string name="delete_from_favourites">REMOVE FROM FAVOURITES</string>

    <string name="sort_by_rating">Top Rated</string>
    <string name="sort_by_popularity">Most Popular</string>
    <string name="favourites">My Favourites</string>
    <string name="about">About</string>


    <!-- Toast message in editor when new record has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="insert_film_successful">Film Added to Favourites</string>

    <!-- Toast message in editor when new record has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="insert_film_failed">Error with saving film to Favourites</string>

    <!-- Toast message in detail activity when current film is successfully inserted [CHAR LIMIT=NONE] -->
    <string name="film_already_added">You already added this film to your Favourites</string>

    <!-- Toast message in detail activity when current film has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_update_record_failed">Error with updating database</string>

    <!-- Toast message in editor when current record was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="film_remove_successful">Film Removed from Favourites</string>

    <!-- Toast message in editor when current record has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="film_remove_failed">Error with removing Film</string>

    <!-- Dialog message to ask the user to confirm deleting the current record [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this record?</string>

    <!-- Dialog button text for the option to confirm deleting the current record [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current record [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <string name="synopsys">Synopsys</string>


</resources>
