<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_black_24dp"
        android:orderInCategory="1"
        android:title="@string/settings_menu_item"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/most_popular"
        android:orderInCategory="1"
        android:title="@string/sort_by_popularity"
        app:showAsAction="never" />
    <item
        android:id="@+id/most_rated"
        android:orderInCategory="2"
        android:title="@string/sort_by_rating"
        app:showAsAction="never" />
    <item
        android:id="@+id/favourite_movies"
        android:orderInCategory="3"
        android:title="@string/favourites"
        app:showAsAction="never" />

    <item
        android:id="@+id/about_the_app"
        android:orderInCategory="4"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>