<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.example.gregorio.popularmovies.DetailActivity">

    <ScrollView
        android:id="@+id/scrollViewDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_medium"
                android:text=""
                android:textColor="@color/black"
                android:textSize="@dimen/text_big"
                android:textStyle="bold"
                tools:text="Title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/posterDisplay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:layout_weight="1"
                    android:contentDescription="Film Poster" />


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_medium"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_small">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Release Date:"
                        android:textSize="@dimen/text_medium" />

                    <TextView
                        android:id="@+id/release_date"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_medium"
                        tools:text="29-05-1976" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="User Rating:"
                        android:textSize="@dimen/text_medium" />

                    <TextView
                        android:id="@+id/user_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_medium"
                        tools:text="10" />

                    <ToggleButton
                        android:id="@+id/add_to_favourites"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_medium"
                        android:textOff="@string/insert_to_favourites"
                        android:textOn="@string/delete_from_favourites" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="@dimen/padding_small"
                android:text="@string/synopsys"
                android:textColor="@color/black"
                android:textSize="@dimen/text_small" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/trailer_loading_spinner"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/trailer__error_message_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_medium"
                        android:text="@string/no_reviews_message"
                        android:textSize="@dimen/text_medium"
                        android:visibility="invisible" />
                </LinearLayout>
            </RelativeLayout>


            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/rv_review"
                    android:text="REVIEWS" />


                <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/rv_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context="com.example.gregorio.popularmovies.DetailActivity"></android.support.v7.widget.RecyclerView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/detail_loading_spinner"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <TextView
                        android:id="@+id/detail__error_message_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/no_reviews_message"
                        android:textSize="@dimen/text_medium"
                        android:visibility="invisible" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>
